2008-12-27  Mirco Bauer <meebey@meebey.net> 

	* FindGroupChatDialog.cs, Preferences/ServerListView.cs: Pass parent to
	  ShowError.
	* gtk-gui/Smuxi.Frontend.Gnome.SteticPreferencesDialog.cs: lol, useless
	  stetic change again
	* Frontend.cs: Support parent in ShowError() method and use MainWindow as
	  fallback.
	
	  Fixed threading bug in ShowError() and ShowException() when marshalling
	  the call into the GUI-thread.

2008-12-26  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Updated copyright year.

2008-12-26  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend.cs: Save / Restore maxmized windows correctly.

2008-12-26  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatView.cs: Disabled Console.WriteLine call.
	* gtk-gui/Smuxi.Frontend.Gnome.SteticPreferencesDialog.cs: funny stetic
	  insisting doing useless changes
	* Frontend.cs: Code clean-up.

2008-12-22  Mirco Bauer <meebey@meebey.net> 

	* Chats/GroupChatView.cs: Some cleanup.
	* EngineManagerDialog.cs: Take care of failed Disconnect() attempts.

2008-12-22  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Made notification area icon configurable, supporting: never,
	  always, minimize to tray, close to tray. (closes trac ticket #137)
	
	  When a RemotingException happens allow the user to reconnect to the
	  server instead of killing the frontend.
	
	  Added preferences to notification area icon context menu as per GNOME
	  HIG.
	* MainWindow.cs, Preferences/PreferencesDialog.cs: Made notification area
	  icon configurable, supporting: never, always, minimize to tray, close to
	  tray. (closes trac ticket #137)

2008-12-19  Mirco Bauer <meebey@meebey.net> 

	* Preferences/PreferencesDialog.cs, Chats/ChatView.cs: Implemented support
	  for changing the text wrap mode from character to word. (closes trac
	  ticket #5)

2008-12-19  Mirco Bauer <meebey@meebey.net> 

	* FindGroupChatDialog.cs: Only change cursor back if the GdkWindow is still
	  available.
